# Interpretator

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
arithmetic_parser/: CMakeLists.txt  arithmetic_parser.cpp  arithmetic_parser.h
interpretator/: CMakeLists.txt  interpretator.cpp  interpretator.h
lexical_analyzer/: CMakeLists.txt  lexical_analyzer.cpp  lexical_analyzer.h
syntax_analyzer/: CMakeLists.txt  syntax_analyzer.cpp  syntax_analyzer.h
